# rig-arxiv-agent

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
src/arxiv/: mod.rs  parser.rs  tools.rs
static/: index.html  table.html
