[package]
name = "rig-arxiv-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.4"
quick-xml = { version = "0.38.3", features = ["serialize"] }
reqwest = "0.12.12"
rig-core = "0.19.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.135"
tera = "1.20.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros","rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
urlencoding = "2.1.3"
